Fix vertical align - Update mobile.css - Update style.css - Update tablet.css

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,7 @@
 
 	#header {
 		margin: 0;
-		vertical-align: center;
+		vertical-align: middle;
 	}
 	#header img {
 		display: none!important;
