--- a/css/tablet.css
+++ b/css/tablet.css
@@ -3,7 +3,7 @@
 
 	#header {
 		height: 150px;
-		vertical-align: center;
+		vertical-align: middle;
 	}
 
 	#header img {
